7-traffic-management/8-access-through-egress-tls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: baidu
spec:
  hosts:
  - www.baidu.com
  ports:
  - number: 80
    name: http-port
    protocol: HTTP
  - number: 443
    name: https-port
    protocol: HTTPS
  resolution: DNS

---

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: baidu
spec:
  host: www.baidu.com
  trafficPolicy:
    tls:
      mode: SIMPLE # originate TLS connections to the upstream endpoint.

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - www.baidu.com

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: internal-service-to-egress-gateway
spec:
  hosts:
  - www.baidu.com
  gateways:
  - mesh
  http:
  - route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: egress-gateway-to-external-service
spec:
  hosts:
  - www.baidu.com
  gateways:
  - istio-egressgateway
  http:
  - match:
    route:
    - destination:
        host: www.baidu.com
        port:
          number: 443
